k8s/bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-deployment
  namespace: fastapi-with-bot
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app-container
          image: varenikvkusny/fastapi-with-bot:1.0

          command: ["python", "-m", "src.tg_bot.main_bot"]

          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 8000
