k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: fastapi-with-bot
spec:
  selector:
    matchLabels:
      app: app

  replicas: 2

  template:
    metadata:
      labels:
        app: app

    spec:
      containers:
        - name: app-container
          image: varenikvkusny/fastapi-with-bot:1.2
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: fastapi-with-bot
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
spec:
  selector:
    app: app
  ports:
    - port: 8000
      targetPort: 8000
