k8s/postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: fastapi-with-bot
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres-service
  replicas: 1

  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres-container
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-mount
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: postgres-mount
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: fastapi-with-bot
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
